# watch_kcals

./: .dev.env  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
back/: Cargo.toml  Dockerfile
back/entity/: Cargo.toml
back/entity/src/: ingredient.rs  ingredient_category.rs  ingredient_detail.rs  lib.rs  meal_declaration.rs  meal_declaration_ingredient.rs  permission.rs  recipe.rs  recipe_category.rs  recipe_ingredient.rs  recipe_line.rs  user.rs  user_permission.rs  weighing.rs
back/migration/: Cargo.toml
back/migration/src/: enums_migrations.rs  ingredient_category_migration.rs  ingredient_detail_migration.rs  ingredient_migration.rs  lib.rs  meal_declaration_ingredient_migration.rs  meal_declaration_migration.rs  permission_migration.rs  recipe_category_migration.rs  recipe_ingredient_migration.rs  recipe_line_migration.rs  recipe_migration.rs  seed_ingredient_category.rs  user_migration.rs  user_permission_migration.rs  weighing_migration.rs
back/src/: main.rs
back/src/controllers/: ingredient_category_controller.rs  ingredient_controller.rs  ingredient_detail_controller.rs  meal_declaration_controller.rs  meal_declaration_ingredient_controller.rs  mod.rs  permission_controller.rs  recipe_category_controller.rs  recipe_controller.rs  recipe_ingregient_controller.rs  recipe_line_controller.rs  user_controller.rs  user_permission_controller.rs  weighing_controller.rs
back/src/services/: ingredient_category_service.rs  ingredient_detail_service.rs  ingredient_service.rs  meal_declaration_ingredient_service.rs  meal_declaration_service.rs  mod.rs  permission_service.rs  recipe_category_service.rs  recipe_ingredient_service.rs  recipe_line_service.rs  recipe_service.rs  user_permission_service.rs  user_service.rs  weighing_service.rs
front/: package.json  quasar.config.js
front/src/boot/: axios.js  i18n.js  store.js
front/src/components/: BreadCrumb.vue  EssentialLink.vue  LogoHeader.vue  PageFooter.vue  RightDrawer.vue  SwitchLanguage.vue
front/src/components/ingredients/: EditIngredient.vue  EditIngredientCategory.vue  EditIngredientDetail.vue  IngredientCategoryList.vue  IngredientList.vue
front/src/components/user/: EditUser.vue  EditWeighing.vue  WeighingList.vue
front/src/css/: quasar.variables.scss
front/src/i18n/: index.js
front/src/i18n/fr-FR/: index.js
front/src/i18n/locales/en-US/: index.js
front/src/i18n/locales/fr/: index.js
front/src/layouts/: MainLayout.vue
front/src/pages/: PageIngredients.vue  PageUserDetails.vue
front/src/router/: routes.ts
front/src/store/modules/: ingredient.js  ingredientCategory.js  ingredientDetail.js  user.js  weighing.js
front/src/store/utils/: genericRestService.js
