[package]
name = "watch_kcals_back"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4.2.1"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = "1.2.2"

[dependencies.sea-orm]
version = "0.10.6"
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-sqlite",
]