[package]
name = "watch-kcals-back"
version = "0.1.0"
edition = "2021"
publish = false

# To use when deploying the application with shuttle
# [lib]

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-cors = "0.6.1"
entity = { path = "entity" }
env_logger = "0.10.0"
migration = { path = "migration" }
actix-web = "4.2.1"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
shuttle-service = { version = "0.8.0", features = ["web-actix-web"] }
shuttle-shared-db = { version = "0.8.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
uuid = "1.2.2"

[dependencies.sea-orm]
version = "0.10.6"
features = [
    "macros",
    "debug-print",
    "runtime-actix-native-tls",
    "sqlx-postgres",
    "uuid",
    "with-chrono",
]
