[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
entity = {path = "../entity"}

[dependencies.sea-orm-migration]
version = "^0"
features = [
  "runtime-async-std-native-tls",
  "sqlx-sqlite",
]