[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }
uuid = "1.2.2"

[dependencies.sea-orm-migration]
version = "0.10.6"
features = ["runtime-actix-native-tls", "sqlx-postgres"]
